# django-sms

./: CHANGELOG.md  LICENSE  LICENSE.django  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
docs/: README.md  conf.py  index.rst
sms/: __init__.py  _http_client.py  message.py  signals.py  utils.py
sms/backends/: __init__.py  aws.py  base.py  console.py  dummy.py  filebased.py  locmem.py  messagebird.py  sms77.py  smsapi-pl.py  smsapi.py  twilio.py
sms/test/: __init__.py  runner.py
tests/: custombackend.py  runtests.py  test_example.py  tests.py
