[metadata]
name = django-sms
version = 0.7.0
url = https://github.com/roaldnefs/django-sms
author = Roald Nefs
author_email = info@roaldnefs.com
description = A Django app for sending SMS with interchangeable backends.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Homepage = https://github.com/roaldnefs/django-sms
    Documentation = https://django-sms.readthedocs.io/en/latest/
    Repository = https://github.com/roaldnefs/django-sms
    Issues = https://github.com/roaldnefs/django-sms/issues
    Changelog = https://raw.githubusercontent.com/roaldnefs/django-sms/main/CHANGELOG.md

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
test_suite = tests.runtests.main
platforms = any
zip_safe = false
install_requires =
    Django >= 3.2

[options.extras_require]
messagebird = messagebird
twilio = twilio

[options.packages.find]
exclude =
    tests
    tests.*
